--- a/main.css
+++ b/main.css
@@ -12,10 +12,17 @@
     display: flex;
     text-align: center;
     max-width: 100%;
-    width: 100%;
+    width: 900px;
     justify-content: center;
-    margin-top: 300px;
+    margin-top: 100px;
     text-decoration: none;  
+    box-sizing: border-box;
+    border: 2px solid black;
+    padding: 30px;
+    height: 400px;
+    align-items: center;
+    
+    
 }
 
 #Verificador input{
@@ -41,3 +48,11 @@
     margin-top: 0px;
     display: none;
 }
+
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
